# devcontainers-catalog

./: .env.example  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CODEBASE_REVIEW_FINAL_SCORE_9.8.md  CODE_OF_CONDUCT.md  CODING_AGENT_PROMPT_ADR.md  CODING_AGENT_PROMPT_CI_SECURITY_TYPEDOC.md  CODING_AGENT_PROMPT_JSDOC.md  CODING_AGENT_PROMPT_TEST_COVERAGE.md  CONTRIBUTING.md  DOCUMENTATION_IMPROVEMENT_PLAN.md  DOCUMENTATION_IMPROVEMENT_PLAN_REVISED.md  DOCUMENTATION_REORGANIZATION_PLAN.md  Makefile  PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_5_REVIEW.md  PHASE_6_COMPLETE.md  PHASE_7_COMPLETE.md  PR_REVIEW.md  README.md  REVIEW_AND_SCORES.md  REVIEW_AND_SCORES_UPDATED.md  REVIEW_AND_SCORES_V3.md  VARIFY.md  VERSIONING.md  WORKFLOW_IMPROVEMENT_PLAN.md  docs-inventory-after.txt  docs-inventory-before.txt  tsconfig.base.json
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
catalog/: README.md  services.json  sidecars.json
docs/: CATALOG-ARCHITECTURE.md  CATALOG.md  MAINTAINERS.md  MIGRATION.md  README.md  REORGANIZATION_SUMMARY.md  SPEC-ALIGNMENT.md  STACKS.md  agents-mcp-contract.md  classroom-fast-start.md  cli-devc.md  dev-environments-strategy.md  devcontainer-spec-alignment.md  docker-containers.md  lesson-flow.md  manifest-contract.md  mvp-launch-plan.md  (+6 more)
docs-site/: index.html  styles.css
tools/generate-lesson/: README.md  pyproject.toml
tools/generate-lesson/generate_lesson/: README.md  cli.py
tools/generate-lesson/tests/: README.md  test_cli.py
(+465 files in other folders)
